--- a/01-Extended DLLs/KxDx/KxDx.vcxproj.filters
+++ b/01-Extended DLLs/KxDx/KxDx.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="iid.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dx11.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="dx12stub.c">
       <Filter>Source Files</Filter>
     </ClCompile>
