--- a/KexCfg/KexCfg.vcxproj
+++ b/KexCfg/KexCfg.vcxproj
@@ -107,6 +107,7 @@
       <EntryPointSymbol>EntryPoint</EntryPointSymbol>
       <SetChecksum>true</SetChecksum>
       <DelayLoadDLLs>wtsapi32.dll;uxtheme.dll;user32.dll;shell32.dll;ole32.dll;oleaut32.dll;comctl32.dll;comdlg32.dll</DelayLoadDLLs>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)\00-Common Headers</AdditionalIncludeDirectories>
@@ -146,6 +147,7 @@
       <EntryPointSymbol>EntryPoint</EntryPointSymbol>
       <SetChecksum>true</SetChecksum>
       <DelayLoadDLLs>wtsapi32.dll;uxtheme.dll;user32.dll;shell32.dll;ole32.dll;oleaut32.dll;comctl32.dll;comdlg32.dll</DelayLoadDLLs>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)\00-Common Headers</AdditionalIncludeDirectories>
@@ -192,6 +194,7 @@
       <EntryPointSymbol>EntryPoint</EntryPointSymbol>
       <SetChecksum>true</SetChecksum>
       <DelayLoadDLLs>wtsapi32.dll;uxtheme.dll;user32.dll;shell32.dll;ole32.dll;oleaut32.dll;comctl32.dll;comdlg32.dll</DelayLoadDLLs>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)\00-Common Headers</AdditionalIncludeDirectories>
@@ -238,6 +241,7 @@
       <EntryPointSymbol>EntryPoint</EntryPointSymbol>
       <SetChecksum>true</SetChecksum>
       <DelayLoadDLLs>wtsapi32.dll;uxtheme.dll;user32.dll;shell32.dll;ole32.dll;oleaut32.dll;comctl32.dll;comdlg32.dll</DelayLoadDLLs>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)\00-Common Headers</AdditionalIncludeDirectories>
