--- a/01-Extended DLLs/KxCom/KxCom.vcxproj.filters
+++ b/01-Extended DLLs/KxCom/KxCom.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="launcher.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="firefoxpatch.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="kxcom.def">
