--- a/KexSetup/KexSetup.vcxproj.filters
+++ b/KexSetup/KexSetup.vcxproj.filters
@@ -47,10 +47,21 @@
     <ClInclude Include="kexsetup.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="C:\Users\lenovo\Pictures\resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="KexSetup.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="KexSetup.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="VxKexNEXT.ico">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
