--- a/01-Extended DLLs/KxUser/KxUser.vcxproj.filters
+++ b/01-Extended DLLs/KxUser/KxUser.vcxproj.filters
@@ -56,6 +56,12 @@
     <ClCompile Include="misc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="chromiumpatch.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="featurestaging.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="kxuser.def">
