--- a/KexCfg/KexCfg.vcxproj
+++ b/KexCfg/KexCfg.vcxproj
@@ -266,6 +266,9 @@
     <ClCompile Include="main.c" />
     <ClCompile Include="util.c" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="kexcfg.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
