--- a/KexCfg/KexCfg.vcxproj.filters
+++ b/KexCfg/KexCfg.vcxproj.filters
@@ -44,4 +44,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="kexcfg.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
