--- a/01-Extended DLLs/KxUser/KxUser.vcxproj
+++ b/01-Extended DLLs/KxUser/KxUser.vcxproj
@@ -238,6 +238,7 @@
     <ClCompile Include="forwards.c" />
     <ClCompile Include="sysmetrc.c" />
     <ClCompile Include="timer.c" />
+    <ClCompile Include="window.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="kxuser.def" />
