--- a/01-Extended DLLs/KxUser/KxUser.vcxproj.filters
+++ b/01-Extended DLLs/KxUser/KxUser.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="featurestaging.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="window.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="kxuser.def">
