--- a/KexDll/KexDll.vcxproj
+++ b/KexDll/KexDll.vcxproj
@@ -299,6 +299,7 @@
     <ClCompile Include="rtlwow64.c" />
     <ClCompile Include="status.c" />
     <ClCompile Include="strmap.c" />
+    <ClCompile Include="syscal.c" />
     <ClCompile Include="syscal32.c" />
     <ClCompile Include="verspoof.c" />
     <ClCompile Include="vxlopcl.c" />
