--- a/01-Extended DLLs/KxCryp/KxCryp.vcxproj.filters
+++ b/01-Extended DLLs/KxCryp/KxCryp.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="schannel.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cert.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="buildcfg.h">
