--- a/01-Extended DLLs/KxNet/KxNet.vcxproj
+++ b/01-Extended DLLs/KxNet/KxNet.vcxproj
@@ -174,7 +174,7 @@
       <AdditionalDependencies>
       </AdditionalDependencies>
       <SetChecksum>true</SetChecksum>
-      <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
+      <TreatLinkerWarningAsErrors>false</TreatLinkerWarningAsErrors>
       <ModuleDefinitionFile>kxnet.def</ModuleDefinitionFile>
     </Link>
     <ResourceCompile>
@@ -213,7 +213,7 @@
       <AdditionalDependencies>
       </AdditionalDependencies>
       <SetChecksum>true</SetChecksum>
-      <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
+      <TreatLinkerWarningAsErrors>false</TreatLinkerWarningAsErrors>
       <ModuleDefinitionFile>kxnet.def</ModuleDefinitionFile>
     </Link>
     <ResourceCompile>
@@ -221,8 +221,10 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="addr.c" />
     <ClCompile Include="dllmain.c" />
     <ClCompile Include="dns.c" />
+    <ClCompile Include="domain.c" />
     <ClCompile Include="forwards.c" />
     <ClCompile Include="winhttp.c" />
     <ClCompile Include="winsock.c" />
