--- a/01-Extended DLLs/KxCryp/KxCryp.vcxproj
+++ b/01-Extended DLLs/KxCryp/KxCryp.vcxproj
@@ -104,8 +104,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>$(TargetDir);$(SolutionDir)\00-Import Libraries</AdditionalLibraryDirectories>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
+      <AdditionalDependencies>crypt32.lib</AdditionalDependencies>
       <SetChecksum>true</SetChecksum>
       <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
       <ModuleDefinitionFile>kxcryp.def</ModuleDefinitionFile>
@@ -136,8 +135,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>$(TargetDir);$(SolutionDir)\00-Import Libraries</AdditionalLibraryDirectories>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
+      <AdditionalDependencies>crypt32.lib</AdditionalDependencies>
       <SetChecksum>true</SetChecksum>
       <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
       <ModuleDefinitionFile>kxcryp.def</ModuleDefinitionFile>
@@ -172,8 +170,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>$(TargetDir);$(SolutionDir)\00-Import Libraries</AdditionalLibraryDirectories>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
+      <AdditionalDependencies>crypt32.lib</AdditionalDependencies>
       <SetChecksum>true</SetChecksum>
       <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
       <ModuleDefinitionFile>kxcryp.def</ModuleDefinitionFile>
@@ -208,8 +205,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>$(TargetDir);$(SolutionDir)\00-Import Libraries</AdditionalLibraryDirectories>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
+      <AdditionalDependencies>crypt32.lib</AdditionalDependencies>
       <SetChecksum>true</SetChecksum>
       <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
       <ModuleDefinitionFile>kxcryp.def</ModuleDefinitionFile>
@@ -220,6 +216,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bcrypt.c" />
+    <ClCompile Include="cert.c" />
     <ClCompile Include="dllmain.c" />
     <ClCompile Include="forwards.c" />
     <ClCompile Include="rng.c" />
