--- a/KexSetup/KexSetup.vcxproj
+++ b/KexSetup/KexSetup.vcxproj
@@ -193,7 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="KexSetup.ico" />
-    <None Include="VxKexNEXT.ico" />
+    <None Include="VxKex.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
